--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="container">
+    <main></main>
+    <aside></aside>
+  </div>
 </body>
 </html>
