--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="container">
-    <main></main>
-    <aside></aside>
+  <div>
+    <main class="flex">
+      <aside>aside</aside>
+      <section>
+        <header>header</header>
+        section
+      </section>
+    </main>
+    <footer>footer</footer>
   </div>
 </body>
 </html>
