--- a/index.html
+++ b/index.html
@@ -17,7 +17,17 @@
 <body>
   <div>
     <main class="flex">
-      <aside></aside>
+      <aside>
+        <div class="logo"><img src="./assets/img/logo.svg" alt=""></div>
+        <nav>
+          <ul>
+            <li><img src="./assets/img/home.svg" alt="" class="icon"><span>Home</span></li>
+            <li><img src="./assets/img/search.svg" alt="" class="icon">Cerca</li> 
+            <li><img src="./assets/img/libreria.svg" alt="" class="icon">La tua libreria</li> 
+          </ul>
+        </nav>
+        PLAYLIST
+      </aside>
       <section>
         <banner></banner>
         <div></div>
