--- a/index.html
+++ b/index.html
@@ -31,7 +31,18 @@
       <section>
         <banner></banner>
         <div></div>
-        <header></header>
+        <header>
+          <nav>
+            <ul>
+              <li>IN EVIDENZA</li>
+              <li>PODCAST</li>
+              <li>CLASSIFICHE</li>
+              <li>GENERI E MOOD</li>
+              <li>NUOVE USCITE</li>
+              <li>SCOPRI</li>
+            </ul>
+          </nav>
+        </header>
         Recently Played <br>
         <img src="./assets/img/metal_lifting.jpg" alt="">
         <img src="./assets/img/stranger.jpeg" alt="">
