--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         PLAYLIST
       </aside>
       <section>
-        <banner></banner>
+        <banner>
+          <button>EFFETTUA L'UPGRADE</button>
+        </banner>
         <div></div>
         <header>
           <nav>
