--- a/index.html
+++ b/index.html
@@ -45,13 +45,47 @@
             </ul>
           </nav>
         </header>
-        Recently Played <br>
-        <img src="./assets/img/metal_lifting.jpg" alt="">
-        <img src="./assets/img/stranger.jpeg" alt="">
-        <img src="./assets/img/aquietplace.jpeg" alt="">
-        <img src="./assets/img/split.jpeg" alt="">
-        <img src="./assets/img/cure.jpeg" alt="">
-        <img src="./assets/img/sinister.jpeg" alt="">
+        <div class="box">
+          <!-- first row -->
+          <h1>Recently Played</h1>
+          <div class="recently flex">
+            <div class="cd flex">
+            <img src="./assets/img/metal_lifting.jpg" alt="">
+            <span class="title">Heavy Metal</span>
+            <span class="subtitle">Subtitle</span>
+            </div>
+            <div class="cd">
+            <img src="./assets/img/stranger.jpeg" alt="">
+            <span class="title">Heavy Metal</span>
+            <span class="subtitle">Subtitle</span>
+            </div>
+            <div class="cd">
+            <img src="./assets/img/aquietplace.jpeg" alt="">
+            <span class="title">Heavy Metal</span>
+            <span class="subtitle">Subtitle</span>
+            </div>
+            <div class="cd">
+            <img src="./assets/img/split.jpeg" alt="">
+            <span class="title">Heavy Metal</span>
+            <span class="subtitle">Subtitle</span>
+            </div>
+            <div class="cd">
+            <img src="./assets/img/cure.jpeg" alt="">
+            <span class="title">Heavy Metal</span>
+            <span class="subtitle">Subtitle</span>
+            </div>
+            <div class="cd">
+            <img src="./assets/img/sinister.jpeg" alt="">
+            <span class="title">Heavy Metal</span>
+            <span class="subtitle">Subtitle</span>
+            </div>
+          </div>
+          <!-- second row -->
+          <div class="creato">
+          </div>
+          <!-- third row -->
+          <div class="artisti"></div>
+        </div>
       </section>
     </main>
     <footer></footer>
