--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <!-- fontawesome -->
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous'/>
   <!-- css -->
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/global.css">
@@ -17,6 +19,7 @@
 <body>
   <div>
     <main class="flex">
+      <!-- aside -->
       <aside>
         <div class="logo"><img src="./assets/img/logo.svg" alt=""></div>
         <nav>
@@ -26,7 +29,28 @@
             <li><img src="./assets/img/libreria.svg" alt="" class="icon">La tua libreria</li> 
           </ul>
         </nav>
-        PLAYLIST
+        <div class="playlist">
+          <h5>PLAYLIST</h5>
+          <ul>
+            <li><i class="fa-solid fa-plus"></i><span>Crea Playlist</span></li>
+            <li><span>Nome Playlist</span></li>
+            <li><span>Nome Playlist</span></li>
+            <li><span>Nome Playlist</span></li>
+            <li><span>Nome Playlist</span></li>
+            <li><span>Nome Playlist</span></li>
+            <li><span>Nome Playlist</span></li>
+            <li><span>Nome Playlist</span></li>
+          </ul>
+        </div>
+        <div class="aside-bottom">
+          <div class="install">
+            <i class="fa-solid fa-gear"></i><span>Installa app</span>
+          </div>
+          <hr>
+          <div class="profile">
+            <i class="fa-solid fa-user"></i><span>John Doe</span>
+          </div>
+        </div>
       </aside>
       <section>
         <banner>
@@ -45,7 +69,7 @@
             </ul>
           </nav>
         </header>
-        <div class="box">
+        <div class="box flex">
           <!-- first row -->
           <h1>Recently Played</h1>
           <div class="recently flex">
@@ -54,41 +78,53 @@
             <span class="title">Heavy Metal</span>
             <span class="subtitle">Subtitle</span>
             </div>
-            <div class="cd">
+            <div class="cd flex">
             <img src="./assets/img/stranger.jpeg" alt="">
             <span class="title">Heavy Metal</span>
             <span class="subtitle">Subtitle</span>
             </div>
-            <div class="cd">
+            <div class="cd flex">
             <img src="./assets/img/aquietplace.jpeg" alt="">
             <span class="title">Heavy Metal</span>
             <span class="subtitle">Subtitle</span>
             </div>
-            <div class="cd">
+            <div class="cd flex">
             <img src="./assets/img/split.jpeg" alt="">
             <span class="title">Heavy Metal</span>
             <span class="subtitle">Subtitle</span>
             </div>
-            <div class="cd">
+            <div class="cd flex">
             <img src="./assets/img/cure.jpeg" alt="">
             <span class="title">Heavy Metal</span>
             <span class="subtitle">Subtitle</span>
             </div>
-            <div class="cd">
+            <div class="cd flex">
             <img src="./assets/img/sinister.jpeg" alt="">
             <span class="title">Heavy Metal</span>
             <span class="subtitle">Subtitle</span>
             </div>
           </div>
           <!-- second row -->
-          <div class="creato">
+          <h1>Creato per John Doe</h1>
+          <div class="creato flex">
+            <div class="cd flex">
+              <img src="./assets/img/sinister.jpeg" alt="">
+              <span class="title">Heavy Metal</span>
+              <span class="subtitle">Subtitle</span>
+            </div>
           </div>
           <!-- third row -->
           <div class="artisti"></div>
         </div>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="footer-left">
+        <img src="./assets/img/player_left.jpg" alt="">
+      </div>
+      <div class="footer-center"></div>
+      <div class="footer-right"></div>
+    </footer>
   </div>
 </body>
 </html>
