--- a/index.html
+++ b/index.html
@@ -118,11 +118,34 @@
         </div>
       </section>
     </main>
-    <footer>
+    <!-- footer -->
+    <footer class="flex">
+      <!-- footer left -->
       <div class="footer-left">
-        <img src="./assets/img/player_left.jpg" alt="">
+        <img src="./assets/img/sinister.jpeg" alt="">
+        <div class="name">
+          <span>Sinister</span>
+          <span>Brano Nome</span>
+        </div>
+        <i class="fa-solid fa-heart"></i>
+        <i class="fa-solid fa-folder"></i>
       </div>
-      <div class="footer-center"></div>
+      <!-- footer center -->
+      <div class="footer-center">
+        <div class="buttons">
+          <i class="fa-solid fa-shuffle"></i>
+          <i class="fa-solid fa-backward-step"></i>
+          <i class="fa-solid fa-circle-play"></i>
+          <i class="fa-solid fa-forward-step"></i>
+          <i class="fa-solid fa-arrow-rotate-right"></i>
+        </div>
+        <div class="timing">
+          <span>0:25</span>
+          <span>barra</span>
+          <span>4:35</span>
+        </div>
+      </div>
+      <!-- footer right -->
       <div class="footer-right"></div>
     </footer>
   </div>
