--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <h5>PLAYLIST</h5>
           <ul>
             <li><i class="fa-solid fa-plus"></i><span>Crea Playlist</span></li>
-            <li><span>Nome Playlist</span></li>
+            <!-- <li><span>Nome Playlist</span></li> -->
             <li><span>Nome Playlist</span></li>
             <li><span>Nome Playlist</span></li>
             <li><span>Nome Playlist</span></li>
@@ -146,7 +146,13 @@
         </div>
       </div>
       <!-- footer right -->
-      <div class="footer-right"></div>
+      <div class="footer-right">
+        <i class="fa-solid fa-bars"></i>
+        <i class="fa-solid fa-display"></i>
+        <!-- <i class="fa-solid fa-volume"></i> -->
+        <i class="fa-solid fa-volume-high"></i>
+        <span>barra</span>
+      </div>
     </footer>
   </div>
 </body>
