main cd section restarted

--- a/index.html
+++ b/index.html
@@ -52,11 +52,14 @@
           </div>
         </div>
       </aside>
+      <!-- section -->
       <section>
+        <!-- banner -->
         <banner>
           <button>EFFETTUA L'UPGRADE</button>
         </banner>
         <div></div>
+        <!-- header -->
         <header>
           <nav>
             <ul>
@@ -69,53 +72,9 @@
             </ul>
           </nav>
         </header>
-        <div class="box flex">
-          <!-- first row -->
-          <h1>Recently Played</h1>
-          <div class="recently flex">
-            <div class="cd flex">
-            <img src="./assets/img/metal_lifting.jpg" alt="">
-            <span class="title">Heavy Metal</span>
-            <span class="subtitle">Subtitle</span>
-            </div>
-            <div class="cd flex">
-            <img src="./assets/img/stranger.jpeg" alt="">
-            <span class="title">Heavy Metal</span>
-            <span class="subtitle">Subtitle</span>
-            </div>
-            <div class="cd flex">
-            <img src="./assets/img/aquietplace.jpeg" alt="">
-            <span class="title">Heavy Metal</span>
-            <span class="subtitle">Subtitle</span>
-            </div>
-            <div class="cd flex">
-            <img src="./assets/img/split.jpeg" alt="">
-            <span class="title">Heavy Metal</span>
-            <span class="subtitle">Subtitle</span>
-            </div>
-            <div class="cd flex">
-            <img src="./assets/img/cure.jpeg" alt="">
-            <span class="title">Heavy Metal</span>
-            <span class="subtitle">Subtitle</span>
-            </div>
-            <div class="cd flex">
-            <img src="./assets/img/sinister.jpeg" alt="">
-            <span class="title">Heavy Metal</span>
-            <span class="subtitle">Subtitle</span>
-            </div>
-          </div>
-          <!-- second row -->
-          <h1>Creato per John Doe</h1>
-          <div class="creato flex">
-            <div class="cd flex">
-              <img src="./assets/img/sinister.jpeg" alt="">
-              <span class="title">Heavy Metal</span>
-              <span class="subtitle">Subtitle</span>
-            </div>
-          </div>
-          <!-- third row -->
-          <div class="artisti"></div>
-        </div>
+        <!-- inizio cd in section -->
+        
+
       </section>
     </main>
     <!-- footer -->
