cd section started

--- a/index.html
+++ b/index.html
@@ -73,8 +73,16 @@
           </nav>
         </header>
         <!-- inizio cd in section -->
-        
-
+        <div class="cd-section">
+          <h1>titolo uno</h1>
+          <div class="first-row"></div>
+          <h1>titolo due</h1>
+          <span>bla bla bla</span>
+          <div class="second-row"></div>
+          <h1>titolo tre</h1>
+          <span>bla bla bla</span>
+          <div class="third-row"></div>
+        </div>
       </section>
     </main>
     <!-- footer -->
