--- a/index.html
+++ b/index.html
@@ -75,13 +75,62 @@
         <!-- inizio cd in section -->
         <div class="cd-section">
           <h1>titolo uno</h1>
-          <div class="first-row"></div>
+          <div class="first-row row ">
+            <div class="cd ">
+              <img src="./assets/img/metal_lifting.jpg" alt="">
+              <span>titolo 1</span>
+              <span>titolo 2</span>
+            </div>
+            <div class="cd ">
+              <img src="./assets/img/metal_lifting.jpg" alt="">
+              <span>titolo 1</span>
+              <span>titolo 2</span>
+            </div>
+            <div class="cd ">
+              <img src="./assets/img/metal_lifting.jpg" alt="">
+              <span>titolo 1</span>
+              <span>titolo 2</span>
+            </div>
+            <div class="cd ">
+              <img src="./assets/img/metal_lifting.jpg" alt="">
+              <span>titolo 1</span>
+              <span>titolo 2</span>
+            </div>
+            <div class="cd ">
+              <img src="./assets/img/metal_lifting.jpg" alt="">
+              <span>titolo 1</span>
+              <span>titolo 2</span>
+            </div>
+            <div class="cd ">
+              <img src="./assets/img/metal_lifting.jpg" alt="">
+              <span>titolo 1</span>
+              <span>titolo 2</span>
+            </div>
+          </div>
           <h1>titolo due</h1>
           <span>bla bla bla</span>
-          <div class="second-row"></div>
+          <div class="second-row row ">
+            <div class="cd ">
+              <img src="./assets/img/metal_lifting.jpg" alt="">
+              <span>titolo 1</span>
+            </div>
+            <div class="cd ">
+              <img src="./assets/img/metal_lifting.jpg" alt="">
+              <span>titolo 1</span>
+            </div>
+          </div>
           <h1>titolo tre</h1>
           <span>bla bla bla</span>
-          <div class="third-row"></div>
+          <div class="third-row row ">
+            <div class="cd ">
+              <img src="./assets/img/metal_lifting.jpg" alt="">
+              <span>titolo 1</span>
+            </div>
+            <div class="cd ">
+              <img src="./assets/img/metal_lifting.jpg" alt="">
+              <span>titolo 1</span>
+            </div>
+          </div>
         </div>
       </section>
     </main>
