--- a/index.html
+++ b/index.html
@@ -74,53 +74,56 @@
         </header>
         <!-- inizio cd in section -->
         <div class="cd-section">
-          <h1>titolo uno</h1>
+          <h1>Recently Played</h1>
+          <!-- first row -->
           <div class="first-row row ">
             <div class="cd ">
               <img src="./assets/img/metal_lifting.jpg" alt="">
-              <span>titolo 1</span>
-              <span>titolo 2</span>
+              <span>Heavy Metal</span>
+              <span>Subtitle</span>
             </div>
             <div class="cd ">
-              <img src="./assets/img/metal_lifting.jpg" alt="">
-              <span>titolo 1</span>
-              <span>titolo 2</span>
+              <img src="./assets/img/stranger.jpeg" alt="">
+              <span>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</span>
+              <span>Kyle Dixon & Michael Stein</span>
             </div>
             <div class="cd ">
-              <img src="./assets/img/metal_lifting.jpg" alt="">
-              <span>titolo 1</span>
-              <span>titolo 2</span>
+              <img src="./assets/img/aquietplace.jpeg" alt="">
+              <span>A Quiet Place</span>
+              <span>Subtitle</span>
             </div>
             <div class="cd ">
-              <img src="./assets/img/metal_lifting.jpg" alt="">
-              <span>titolo 1</span>
-              <span>titolo 2</span>
+              <img src="./assets/img/split.jpeg" alt="">
+              <span>Split</span>
+              <span>Subtitle</span>
             </div>
             <div class="cd ">
-              <img src="./assets/img/metal_lifting.jpg" alt="">
-              <span>titolo 1</span>
-              <span>titolo 2</span>
+              <img src="./assets/img/cure.jpeg" alt="">
+              <span>A cure for wellness</span>
+              <span>Subtitle</span>
             </div>
             <div class="cd ">
-              <img src="./assets/img/metal_lifting.jpg" alt="">
-              <span>titolo 1</span>
-              <span>titolo 2</span>
+              <img src="./assets/img/sinister.jpeg" alt="">
+              <span>Sinister</span>
+              <span>Subtitle</span>
             </div>
           </div>
-          <h1>titolo due</h1>
-          <span>bla bla bla</span>
+          <h1>Creato per John Doe</h1>
+          <span>Più ascolti, più accurati saranno i suggerimenti.</span>
+          <!-- second row -->
           <div class="second-row row ">
             <div class="cd ">
               <img src="./assets/img/metal_lifting.jpg" alt="">
-              <span>titolo 1</span>
+              <span>Release Radar</span>
             </div>
             <div class="cd ">
               <img src="./assets/img/metal_lifting.jpg" alt="">
-              <span>titolo 1</span>
+              <span>Daily Mix 1</span>
             </div>
           </div>
-          <h1>titolo tre</h1>
-          <span>bla bla bla</span>
+          <h1>Artisti più popolari</h1>
+          <span>Più ascolti, più accurati saranno i suggerimenti.</span>
+          <!-- third row -->
           <div class="third-row row ">
             <div class="cd ">
               <img src="./assets/img/metal_lifting.jpg" alt="">
