--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         <header>
           <nav>
             <ul>
-              <li>IN EVIDENZA</li>
+              <li id="underlined">IN EVIDENZA <div class="cover1"></div>
+              <div class="cover2"></div></li>
               <li>PODCAST</li>
               <li>CLASSIFICHE</li>
               <li>GENERI E MOOD</li>
@@ -77,7 +78,7 @@
           <h1>Recently Played</h1>
           <!-- first row -->
           <div class="first-row row ">
-            <div class="cd ">
+            <div class="cd">
               <img src="./assets/img/metal_lifting.jpg" alt="">
               <span>Heavy Metal</span>
               <span>Subtitle</span>
@@ -87,7 +88,8 @@
               <span>Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</span>
               <span>Kyle Dixon & Michael Stein</span>
             </div>
-            <div class="cd ">
+            <div class="cd">
+              <!-- <i class="fa-solid fa-circle-play"></i> -->
               <img src="./assets/img/aquietplace.jpeg" alt="">
               <span>A Quiet Place</span>
               <span>Subtitle</span>
@@ -109,29 +111,29 @@
             </div>
           </div>
           <h1>Creato per John Doe</h1>
-          <span>Più ascolti, più accurati saranno i suggerimenti.</span>
+          <h4>Più ascolti, più accurati saranno i suggerimenti.</h4>
           <!-- second row -->
           <div class="second-row row ">
             <div class="cd ">
-              <img src="./assets/img/metal_lifting.jpg" alt="">
+              <img src="./assets/img/radar.jpeg" alt="">
               <span>Release Radar</span>
             </div>
             <div class="cd ">
-              <img src="./assets/img/metal_lifting.jpg" alt="">
+              <img src="./assets/img/mixdaily.jpeg" alt="">
               <span>Daily Mix 1</span>
             </div>
           </div>
           <h1>Artisti più popolari</h1>
-          <span>Più ascolti, più accurati saranno i suggerimenti.</span>
+          <h4>Più ascolti, più accurati saranno i suggerimenti.</h4>
           <!-- third row -->
           <div class="third-row row ">
             <div class="cd ">
-              <img src="./assets/img/metal_lifting.jpg" alt="">
-              <span>titolo 1</span>
+              <img src="./assets/img/youg.jpeg" alt="">
+              <span>Youg</span>
             </div>
             <div class="cd ">
-              <img src="./assets/img/metal_lifting.jpg" alt="">
-              <span>titolo 1</span>
+              <img src="./assets/img/einaudi.jpeg" alt="">
+              <span>Einaudi</span>
             </div>
           </div>
         </div>
